--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>My Lists</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>My Shopping and Holiday Lists</h1>
 
+    <h2>Shopping List</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Item 1</li>
+        <li data-ns-test="shoppingList">Item 2</li>
+        <li data-ns-test="shoppingList">Item 3</li>
+    </ol>
+
+    <h2>Holiday Destinations</h2>
+    <ul>
+        <li data-ns-test="holidayList">Destination 1</li>
+        <li data-ns-test="holidayList">Destination 2</li>
+        <li data-ns-test="holidayList">Destination 3</li>
+    </ul>
 </body>
-
 </html>
